--- a/archives/toutiao-search/2023-11-04.md
+++ b/archives/toutiao-search/2023-11-04.md
@@ -1,51 +1,69 @@
 # 2023-11-04
 
-共 194 条
+共 201 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Nov 04 2023 21:01:44 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Nov 04 2023 22:00:47 GMT+0800 (China Standard Time) -->
 1. [警方通报女子路怒咬掉男子一块肉](https://so.toutiao.com/search?keyword=警方通报女子路怒咬掉男子一块肉)
-1. [合肥小学生校内猝死 三大疑问待解](https://so.toutiao.com/search?keyword=合肥小学生校内猝死+三大疑问待解)
-1. [“进博老友”再度相约](https://so.toutiao.com/search?keyword=“进博老友”再度相约)
-1. [中超：山东泰山5-1河南队](https://so.toutiao.com/search?keyword=中超：山东泰山5-1河南队)
-1. [塞尔维亚安全和信息局局长武林辞职](https://so.toutiao.com/search?keyword=塞尔维亚安全和信息局局长武林辞职)
-1. [媒体：岸田访问菲律宾军事意味浓](https://so.toutiao.com/search?keyword=媒体：岸田访问菲律宾军事意味浓)
-1. [广东江门发生4.3级地震 深圳有震感](https://so.toutiao.com/search?keyword=广东江门发生4.3级地震+深圳有震感)
-1. [库里最后0.2秒绝杀 勇士胜雷霆](https://so.toutiao.com/search?keyword=库里最后0.2秒绝杀+勇士胜雷霆)
+1. [广东恩平地震无破坏性但震感强烈](https://so.toutiao.com/search?keyword=广东恩平地震无破坏性但震感强烈)
+1. [我国新增4处世界灌溉工程遗产](https://so.toutiao.com/search?keyword=我国新增4处世界灌溉工程遗产)
+1. [官方回应要求小学生戴头盔上下学](https://so.toutiao.com/search?keyword=官方回应要求小学生戴头盔上下学)
+1. [加炒作军机遭中方拦截 国防部回应](https://so.toutiao.com/search?keyword=加炒作军机遭中方拦截+国防部回应)
 1. [以色列总理称将全速推进战事](https://so.toutiao.com/search?keyword=以色列总理称将全速推进战事)
+1. [佛山秋色巡游活动](https://so.toutiao.com/search?keyword=佛山秋色巡游活动)
+1. [学者谈如何抑制地方罚款冲动](https://so.toutiao.com/search?keyword=学者谈如何抑制地方罚款冲动)
+1. [库里最后0.2秒绝杀 勇士胜雷霆](https://so.toutiao.com/search?keyword=库里最后0.2秒绝杀+勇士胜雷霆)
 1. [官方辟谣河南农户高粱被村民抢收](https://so.toutiao.com/search?keyword=官方辟谣河南农户高粱被村民抢收)
 1. [男孩被午托班男老师当街追打](https://so.toutiao.com/search?keyword=男孩被午托班男老师当街追打)
 1. [真主党领导人首次公开表态巴以冲突](https://so.toutiao.com/search?keyword=真主党领导人首次公开表态巴以冲突)
-1. [曝美军突击队正帮助以色列寻找人质](https://so.toutiao.com/search?keyword=曝美军突击队正帮助以色列寻找人质)
 1. [媒体：以色列“AI参战”引诸多疑问](https://so.toutiao.com/search?keyword=媒体：以色列“AI参战”引诸多疑问)
+1. [美不再允许军方高级领导人赴以色列](https://so.toutiao.com/search?keyword=美不再允许军方高级领导人赴以色列)
 1. [以色列警察继续加强主麻日管控](https://so.toutiao.com/search?keyword=以色列警察继续加强主麻日管控)
-1. [亲巴勒斯坦抗议者围堵美军运输船](https://so.toutiao.com/search?keyword=亲巴勒斯坦抗议者围堵美军运输船)
-1. [《无所畏惧》节奏快如闪电](https://so.toutiao.com/search?keyword=《无所畏惧》节奏快如闪电)
+1. [曝美军突击队正帮助以色列寻找人质](https://so.toutiao.com/search?keyword=曝美军突击队正帮助以色列寻找人质)
+1. [爱尔兰总理批评以色列加沙行动](https://so.toutiao.com/search?keyword=爱尔兰总理批评以色列加沙行动)
+1. [以色列埃拉特响起防空警报](https://so.toutiao.com/search?keyword=以色列埃拉特响起防空警报)
 1. [缅北混战：政治战下的生存之战](https://so.toutiao.com/search?keyword=缅北混战：政治战下的生存之战)
-1. [官方回应要求小学生戴头盔上下学](https://so.toutiao.com/search?keyword=官方回应要求小学生戴头盔上下学)
-1. [“蓝委”喊话侯友宜找韩国瑜当副手](https://so.toutiao.com/search?keyword=“蓝委”喊话侯友宜找韩国瑜当副手)
-1. [以总理：哈马斯不放人不会临时停火](https://so.toutiao.com/search?keyword=以总理：哈马斯不放人不会临时停火)
-1. [世卫组织对加沙救护车遭袭表示震惊](https://so.toutiao.com/search?keyword=世卫组织对加沙救护车遭袭表示震惊)
-1. [学者：巴以冲突联合国权威更显重要](https://so.toutiao.com/search?keyword=学者：巴以冲突联合国权威更显重要)
+1. [今年已有40个“老虎”落马](https://so.toutiao.com/search?keyword=今年已有40个“老虎”落马)
 1. [哈马斯：准备就换俘问题完全妥协](https://so.toutiao.com/search?keyword=哈马斯：准备就换俘问题完全妥协)
-1. [加沙卫生部门否认哈马斯使用救护车](https://so.toutiao.com/search?keyword=加沙卫生部门否认哈马斯使用救护车)
-1. [以承认法新社加沙分社或受空袭波及](https://so.toutiao.com/search?keyword=以承认法新社加沙分社或受空袭波及)
-1. [美媒：以军消灭哈马斯所剩时间有限](https://so.toutiao.com/search?keyword=美媒：以军消灭哈马斯所剩时间有限)
-1. [黎巴嫩总理将在约旦会见布林肯](https://so.toutiao.com/search?keyword=黎巴嫩总理将在约旦会见布林肯)
-1. [官方回应昆明2名环卫工垃圾站身亡](https://so.toutiao.com/search?keyword=官方回应昆明2名环卫工垃圾站身亡)
-1. [专家：哈马斯地道战或增加以军伤亡](https://so.toutiao.com/search?keyword=专家：哈马斯地道战或增加以军伤亡)
-1. [柯文哲称愿对蓝白合民调方案让步](https://so.toutiao.com/search?keyword=柯文哲称愿对蓝白合民调方案让步)
-1. [S13：JDG3-1击败KT晋级四强](https://so.toutiao.com/search?keyword=S13：JDG3-1击败KT晋级四强)
-1. [“以色列用AI猎杀哈马斯”背后疑团](https://so.toutiao.com/search?keyword=“以色列用AI猎杀哈马斯”背后疑团)
-1. [加炒作军机遭中方拦截 国防部回应](https://so.toutiao.com/search?keyword=加炒作军机遭中方拦截+国防部回应)
-1. [湖南浏阳举行国际花炮文化节](https://so.toutiao.com/search?keyword=湖南浏阳举行国际花炮文化节)
-1. [美高官：预计以军之后的空袭会减少](https://so.toutiao.com/search?keyword=美高官：预计以军之后的空袭会减少)
+1. [学者：巴以冲突联合国权威更显重要](https://so.toutiao.com/search?keyword=学者：巴以冲突联合国权威更显重要)
+1. [世卫组织对加沙救护车遭袭表示震惊](https://so.toutiao.com/search?keyword=世卫组织对加沙救护车遭袭表示震惊)
+1. [以总理：哈马斯不放人不会临时停火](https://so.toutiao.com/search?keyword=以总理：哈马斯不放人不会临时停火)
 1. [媒体人评库里：有些人本身就是体系](https://so.toutiao.com/search?keyword=媒体人评库里：有些人本身就是体系)
-1. [德国禁止举办支持哈马斯活动](https://so.toutiao.com/search?keyword=德国禁止举办支持哈马斯活动)
+1. [以承认法新社加沙分社或受空袭波及](https://so.toutiao.com/search?keyword=以承认法新社加沙分社或受空袭波及)
 1. [哈马斯下属武装称打死4名以军士兵](https://so.toutiao.com/search?keyword=哈马斯下属武装称打死4名以军士兵)
+1. [伊朗：抵抗组织已做好准备抗击以方](https://so.toutiao.com/search?keyword=伊朗：抵抗组织已做好准备抗击以方)
+1. [加沙民众喝脏水染病](https://so.toutiao.com/search?keyword=加沙民众喝脏水染病)
+1. [美高官：预计以军之后的空袭会减少](https://so.toutiao.com/search?keyword=美高官：预计以军之后的空袭会减少)
+1. [中超：山东泰山5-1河南队](https://so.toutiao.com/search?keyword=中超：山东泰山5-1河南队)
+1. [官方回应昆明2名环卫工垃圾站身亡](https://so.toutiao.com/search?keyword=官方回应昆明2名环卫工垃圾站身亡)
+1. [“以色列用AI猎杀哈马斯”背后疑团](https://so.toutiao.com/search?keyword=“以色列用AI猎杀哈马斯”背后疑团)
+1. [主裁官方解释库里绝杀：进球有效](https://so.toutiao.com/search?keyword=主裁官方解释库里绝杀：进球有效)
+1. [超百万人从加沙北部被驱赶到南部](https://so.toutiao.com/search?keyword=超百万人从加沙北部被驱赶到南部)
+1. [专家：哈马斯地道战或增加以军伤亡](https://so.toutiao.com/search?keyword=专家：哈马斯地道战或增加以军伤亡)
+1. [“蓝委”喊话侯友宜找韩国瑜当副手](https://so.toutiao.com/search?keyword=“蓝委”喊话侯友宜找韩国瑜当副手)
+1. [广东江门发生4.3级地震 深圳有震感](https://so.toutiao.com/search?keyword=广东江门发生4.3级地震+深圳有震感)
+1. [美媒：以军消灭哈马斯所剩时间有限](https://so.toutiao.com/search?keyword=美媒：以军消灭哈马斯所剩时间有限)
+1. [亲巴勒斯坦抗议者围堵美军运输船](https://so.toutiao.com/search?keyword=亲巴勒斯坦抗议者围堵美军运输船)
+1. [大型罐车因罐身超高被卡立交桥下](https://so.toutiao.com/search?keyword=大型罐车因罐身超高被卡立交桥下)
+1. [德国禁止举办支持哈马斯活动](https://so.toutiao.com/search?keyword=德国禁止举办支持哈马斯活动)
+1. [入秋以来首个暴雪橙色预警发布](https://so.toutiao.com/search?keyword=入秋以来首个暴雪橙色预警发布)
+1. [缅北“1027行动”超6200人流离失所](https://so.toutiao.com/search?keyword=缅北“1027行动”超6200人流离失所)
+1. [库里赛后和霍姆格伦交换球衣](https://so.toutiao.com/search?keyword=库里赛后和霍姆格伦交换球衣)
+1. [当事人回应获评助学金后仍举报](https://so.toutiao.com/search?keyword=当事人回应获评助学金后仍举报)
+1. [柯文哲称愿对蓝白合民调方案让步](https://so.toutiao.com/search?keyword=柯文哲称愿对蓝白合民调方案让步)
+1. [黎巴嫩总理将在约旦会见布林肯](https://so.toutiao.com/search?keyword=黎巴嫩总理将在约旦会见布林肯)
+1. [哈马斯：以军破坏加沙城太阳能设施](https://so.toutiao.com/search?keyword=哈马斯：以军破坏加沙城太阳能设施)
+1. [徐巧芯挺韩国瑜列不分区第一名](https://so.toutiao.com/search?keyword=徐巧芯挺韩国瑜列不分区第一名)
+1. [合肥小学生校内猝死 三大疑问待解](https://so.toutiao.com/search?keyword=合肥小学生校内猝死+三大疑问待解)
+1. [“进博老友”再度相约](https://so.toutiao.com/search?keyword=“进博老友”再度相约)
+1. [塞尔维亚安全和信息局局长武林辞职](https://so.toutiao.com/search?keyword=塞尔维亚安全和信息局局长武林辞职)
+1. [媒体：岸田访问菲律宾军事意味浓](https://so.toutiao.com/search?keyword=媒体：岸田访问菲律宾军事意味浓)
+1. [《无所畏惧》节奏快如闪电](https://so.toutiao.com/search?keyword=《无所畏惧》节奏快如闪电)
+1. [加沙卫生部门否认哈马斯使用救护车](https://so.toutiao.com/search?keyword=加沙卫生部门否认哈马斯使用救护车)
+1. [S13：JDG3-1击败KT晋级四强](https://so.toutiao.com/search?keyword=S13：JDG3-1击败KT晋级四强)
+1. [湖南浏阳举行国际花炮文化节](https://so.toutiao.com/search?keyword=湖南浏阳举行国际花炮文化节)
 1. [女子买星巴克杯身发现侮辱性字眼](https://so.toutiao.com/search?keyword=女子买星巴克杯身发现侮辱性字眼)
 1. [美众议院通过促进对伊朗制裁法案](https://so.toutiao.com/search?keyword=美众议院通过促进对伊朗制裁法案)
-1. [爱尔兰总理批评以色列加沙行动](https://so.toutiao.com/search?keyword=爱尔兰总理批评以色列加沙行动)
 1. [外交干部被渗透策反风险较高](https://so.toutiao.com/search?keyword=外交干部被渗透策反风险较高)
 1. [大连、青岛海上马拉松组委会被处罚](https://so.toutiao.com/search?keyword=大连、青岛海上马拉松组委会被处罚)
 1. [加沙地带多家医院濒临停运](https://so.toutiao.com/search?keyword=加沙地带多家医院濒临停运)
@@ -53,32 +71,23 @@
 1. [浏阳2023焰火大会](https://so.toutiao.com/search?keyword=浏阳2023焰火大会)
 1. [中超大幕落下 5个关键词回顾本赛季](https://so.toutiao.com/search?keyword=中超大幕落下+5个关键词回顾本赛季)
 1. [热依扎新剧硬刚恶婆婆](https://so.toutiao.com/search?keyword=热依扎新剧硬刚恶婆婆)
-1. [学者谈如何抑制地方罚款冲动](https://so.toutiao.com/search?keyword=学者谈如何抑制地方罚款冲动)
 1. [中国工商银行原副行长张红力被查](https://so.toutiao.com/search?keyword=中国工商银行原副行长张红力被查)
-1. [大型罐车因罐身超高被卡立交桥下](https://so.toutiao.com/search?keyword=大型罐车因罐身超高被卡立交桥下)
 1. [中超：浙江队获季军 大连人降级](https://so.toutiao.com/search?keyword=中超：浙江队获季军+大连人降级)
 1. [普京：俄罗斯人要对巴以冲突清醒](https://so.toutiao.com/search?keyword=普京：俄罗斯人要对巴以冲突清醒)
-1. [当事人回应获评助学金后仍举报](https://so.toutiao.com/search?keyword=当事人回应获评助学金后仍举报)
 1. [巴以冲突已致加沙3760名儿童死亡](https://so.toutiao.com/search?keyword=巴以冲突已致加沙3760名儿童死亡)
 1. [加沙卫生部门：14人南迁时遭袭身亡](https://so.toutiao.com/search?keyword=加沙卫生部门：14人南迁时遭袭身亡)
 1. [加沙北部至少25%建筑受损和被毁](https://so.toutiao.com/search?keyword=加沙北部至少25%建筑受损和被毁)
-1. [库里赛后和霍姆格伦交换球衣](https://so.toutiao.com/search?keyword=库里赛后和霍姆格伦交换球衣)
 1. [以色列截留加沙地带资金](https://so.toutiao.com/search?keyword=以色列截留加沙地带资金)
 1. [华为公布鸿蒙OS4升级计划清单](https://so.toutiao.com/search?keyword=华为公布鸿蒙OS4升级计划清单)
 1. [普京：乌克兰的内部腐败无人能及](https://so.toutiao.com/search?keyword=普京：乌克兰的内部腐败无人能及)
 1. [华为导致苹果节节败退？库克回应](https://so.toutiao.com/search?keyword=华为导致苹果节节败退？库克回应)
-1. [美不再允许军方高级领导人赴以色列](https://so.toutiao.com/search?keyword=美不再允许军方高级领导人赴以色列)
 1. [黑龙江东部将有大暴雪](https://so.toutiao.com/search?keyword=黑龙江东部将有大暴雪)
 1. [纪委监委系统3名“内鬼”同日被查](https://so.toutiao.com/search?keyword=纪委监委系统3名“内鬼”同日被查)
 1. [汝州卫健委回应拖欠医生工资：没钱](https://so.toutiao.com/search?keyword=汝州卫健委回应拖欠医生工资：没钱)
-1. [入秋以来首个暴雪橙色预警发布](https://so.toutiao.com/search?keyword=入秋以来首个暴雪橙色预警发布)
 1. [男子在药店殴打女友已被拘](https://so.toutiao.com/search?keyword=男子在药店殴打女友已被拘)
-1. [今年已有40个“老虎”落马](https://so.toutiao.com/search?keyword=今年已有40个“老虎”落马)
 1. [浏阳国际花炮文化节开幕式](https://so.toutiao.com/search?keyword=浏阳国际花炮文化节开幕式)
 1. [3类人需警惕秋冬季呼吸道高发疾病](https://so.toutiao.com/search?keyword=3类人需警惕秋冬季呼吸道高发疾病)
 1. [泰山球迷会为河南队球迷准备矿泉水](https://so.toutiao.com/search?keyword=泰山球迷会为河南队球迷准备矿泉水)
-1. [加沙民众喝脏水染病](https://so.toutiao.com/search?keyword=加沙民众喝脏水染病)
-1. [伊朗：抵抗组织已做好准备抗击以方](https://so.toutiao.com/search?keyword=伊朗：抵抗组织已做好准备抗击以方)
 1. [湖南省郴州市纪委原书记李超被查](https://so.toutiao.com/search?keyword=湖南省郴州市纪委原书记李超被查)
 1. [中超官方公布收官战裁判安排](https://so.toutiao.com/search?keyword=中超官方公布收官战裁判安排)
 1. [联合国：巴人道救援预计需12亿美元](https://so.toutiao.com/search?keyword=联合国：巴人道救援预计需12亿美元)
@@ -103,7 +112,6 @@
 1. [大连人中超末轮海报致谢球迷](https://so.toutiao.com/search?keyword=大连人中超末轮海报致谢球迷)
 1. [奥迪轿车恶意别车不料被撞进绿化带](https://so.toutiao.com/search?keyword=奥迪轿车恶意别车不料被撞进绿化带)
 1. [媒体：泰山队要用胜利为联赛收尾](https://so.toutiao.com/search?keyword=媒体：泰山队要用胜利为联赛收尾)
-1. [超百万人从加沙北部被驱赶到南部](https://so.toutiao.com/search?keyword=超百万人从加沙北部被驱赶到南部)
 1. [WTT冠军赛：王楚钦晋级四强](https://so.toutiao.com/search?keyword=WTT冠军赛：王楚钦晋级四强)
 1. [女律师遭被告榔头追击 律协介入](https://so.toutiao.com/search?keyword=女律师遭被告榔头追击+律协介入)
 1. [华为“半导体封装”专利公布](https://so.toutiao.com/search?keyword=华为“半导体封装”专利公布)
@@ -140,7 +148,6 @@
 1. [巴以冲突致237起针对医疗系统袭击](https://so.toutiao.com/search?keyword=巴以冲突致237起针对医疗系统袭击)
 1. [拜登：将否决对以色列军援议案](https://so.toutiao.com/search?keyword=拜登：将否决对以色列军援议案)
 1. [助学金事件当事人称已搬离宿舍](https://so.toutiao.com/search?keyword=助学金事件当事人称已搬离宿舍)
-1. [缅北“1027行动”超6200人流离失所](https://so.toutiao.com/search?keyword=缅北“1027行动”超6200人流离失所)
 1. [S13：BLG 3-2击败GEN晋级四强](https://so.toutiao.com/search?keyword=S13：BLG+3-2击败GEN晋级四强)
 1. [肺炎支原体感染已出现叠加感染](https://so.toutiao.com/search?keyword=肺炎支原体感染已出现叠加感染)
 1. [男子药店暴打女子 警方：两人是情侣](https://so.toutiao.com/search?keyword=男子药店暴打女子+警方：两人是情侣)
